--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
     "axios-retry": "^3.1.9",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "install": "^0.13.0",
